<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Just Java</string>

    <!--activity_main-->
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus_symbol">+</string>
    <string name="initial_quantity_value">2</string>
    <string name="minus_symbol">-</string>
    <string name="price">Price</string>
    <string name="initial_price">$0</string>
    <string name="order">Order</string>


    <!--strings hard code-->
    <string name="order_title">ORDER SUMMARY</string>
    <string name="label_name">Name: </string>
    <string name="label_add_whipped_cream">Add whipped cream? </string>
    <string name="label_add_chocolate">Add chocolate? </string>
    <string name="label_quantity">Quantity: </string>
    <string name="label_total">Total: </string>
    <string name="label_thank_you">Thank you!</string>
    <string name="subject_email_order">JustJava order for </string>

    <!--messages-->
    <string name="send_email_message">Send email...</string>
    <string name="max_value_quantity_message">The max value is 100! =/</string>
    <string name="min_value_quantity_message">The least value is 1! =D</string>

</resources>
